--- a/AutoBuyer/AutoBuyer/AutoBuyer.csproj
+++ b/AutoBuyer/AutoBuyer/AutoBuyer.csproj
@@ -7,12 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
     <PackageReference Include="Selenium.Support" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="DriversApplication\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="DriversApplication\msedgedriver.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
