--- a/AutoBuyer/AutoBuyer/AutoBuyer.csproj
+++ b/AutoBuyer/AutoBuyer/AutoBuyer.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
+    <PackageReference Include="Quartz" Version="3.0.7" />
     <PackageReference Include="Selenium.Support" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
   </ItemGroup>
